--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 GIT<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta "desciption" content = "Si estas buscando sentir un sabor que te despierte las ganas de salir, o quieres tener una experiencia inexplicable, CoffeeCoss es tu mejor elección.
+    <meta desciption content = "Si estas buscando sentir un sabor que te despierte las ganas de salir, o quieres tener una experiencia inexplicable, CoffeeCoss es tu mejor elección.
             CoffeeCoss es una marca de café reconocida a nivel mundial por su peculiar sabor tostado en sus granos de café, gracias a eso formamos parte de tu día a día">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
